--- a/calendar.html
+++ b/calendar.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
- <head>
- <title>Using External JavaScript</title>
- <script src="src/function.js"></script>
- </head>
- <body>
- </body>
+  <head>
+    <title>Using External JavaScript</title>
+    <style type="text/css">
+      table {
+        width: 400px;
+        border-collapse: collapse;
+        background-color: lightblue;
+      }
+      table,
+      td,
+      th {
+        border: 1px solid black;
+        padding: 4px;
+      }
+      th {
+        text-align: left;
+        color: white;
+        background-color: rgb(241, 129, 249);
+      }
+      tr.oddrow {
+        background-color: white;
+      }
+    </style>
+    <script src="src/function.js"></script>
+  </head>
+  <body></body>
 </html>
