Changed the name of the files

--- a/HW6_65011368.html
+++ b/HW6_65011368.html
@@ -36,6 +36,6 @@
     <div id="calendar-container"></div> <br/><br/>
     <button id="prev-month-btn">&#60;</button>
     <button id="next-month-btn">&#62;</button>
-    <script src="src/function.js"></script>
+    <script src="src/HW6_65011368.js"></script>
   </body>
 </html>
